
export default class Component {

  constructor(actor) {
    this.actor = actor;
  }

  update(dt) {}
}